# spritegen

./: .gitignore  DESIGN.md  README.md  generate_pollinations.py  launch_spritegen.cmd  pyproject.toml
.github/workflows/: kenneth968.yml
docs/: game-asset-generator-research.md
docs/product-audits/2026-07-07-first-run/: notes.md
docs/superpowers/plans/: 2026-07-09-spritegen-guided-first-run-provider-setup.md
docs/superpowers/specs/: 2026-07-10-frictionless-first-run-design.md
scripts/: build_desktop_app.ps1
src/spritegen/: __init__.py  cli.py  config.py  consistency.py  desktop.py  enhancement.py  generator.py  layouts.py  models.py  mycomed.py  preflight.py  project_export.py  project_gallery.py  project_generation.py  project_starters.py  projects.py  prompt_guidance.py  provider_errors.py  provider_models.py  quick_start.py  slicer.py  style.py  user_settings.py  workflow_presets.py
src/spritegen/prompt_guides/: __init__.py  asset.md  asset_type.md  color_modes.md  layout_character_full_plus_8_emotions.md  layout_four_stage_grid.md  layout_single_sprite.md  project.md
src/spritegen/ui/: app_paths.py  controller.py  generation_thread.py  main_window.py  model_picker.py  preview_panel.py  theme.py
src/spritegen/ui/widgets/: __init__.py  action_footer.py  project_panel.py  (+5 more)
tests/spritegen/: test_app_paths.py  test_desktop_ui.py  test_projects.py  test_provider_bar.py  test_provider_models.py  test_quick_composer.py  test_quick_start.py  test_settings_drawer.py  test_slicer.py  test_spritegen.py  test_user_settings_v2.py  test_welcome_overlay.py
