[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "spritegen"
version = "0.1.0"
description = "AI-powered sprite sheet generator for tower defense games"
requires-python = ">=3.11"
dependencies = ["pillow>=10.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]
gui = ["PySide6>=6.6", "pillow>=10.0"]
build = ["PyInstaller>=6.0"]

[project.scripts]
spritegen = "spritegen.cli:main"
spritegen-desktop = "spritegen.desktop:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest_tmp"

[tool.ruff]
target-version = "py311"
line-length = 100
